[gd_scene load_steps=20 format=3 uid="uid://b61e2qh88myfb"]

[ext_resource type="Script" uid="uid://dk5bo8f5w4fu8" path="res://Scripts/Main_Menu.gd" id="1_2x1g0"]
[ext_resource type="Texture2D" uid="uid://cn16ddildslab" path="res://Graphics/Zonas/Exclusion-zone/2 Background/Day/Fondo.png" id="2_riqfo"]
[ext_resource type="Texture2D" uid="uid://df3eaw8ttv2l6" path="res://Graphics/GUI/Windows/1-4.png" id="3_yxkem"]
[ext_resource type="FontFile" uid="uid://c88rb6dh1ub4j" path="res://Graphics/Fonts/Press_Start_2P/PressStart2P-Regular.ttf" id="4_7v4os"]
[ext_resource type="Texture2D" uid="uid://b3degqy5uf8ea" path="res://Graphics/GUI/Buttons/7-1.png" id="5_pjscj"]
[ext_resource type="Texture2D" uid="uid://bdn1sk233bncw" path="res://Graphics/GUI/Buttons/7-3.png" id="6_m7n2d"]
[ext_resource type="Texture2D" uid="uid://b2bod7ibmudmv" path="res://Graphics/GUI/Buttons/7-2.png" id="7_65hh5"]
[ext_resource type="Texture2D" uid="uid://cecrno5ffpubr" path="res://Graphics/GUI/Buttons/1-1.png" id="8_6byu3"]
[ext_resource type="Texture2D" uid="uid://l4htlbip8c4h" path="res://Graphics/GUI/Buttons/1-3.png" id="9_leunp"]
[ext_resource type="Texture2D" uid="uid://c41884kfdl8mq" path="res://Graphics/GUI/Buttons/1-2.png" id="10_h1v62"]
[ext_resource type="Texture2D" uid="uid://uivhim05lh6f" path="res://Graphics/GUI/Buttons/11-1.png" id="11_5hdia"]
[ext_resource type="Texture2D" uid="uid://duy6x83y07ptt" path="res://Graphics/GUI/Buttons/11-2.png" id="12_iqn0u"]
[ext_resource type="Texture2D" uid="uid://b50anxboht7j5" path="res://Graphics/GUI/Buttons/11-3.png" id="13_3u44c"]
[ext_resource type="Texture2D" uid="uid://brc5fi5763mdw" path="res://Graphics/GUI/Godot Logo.png" id="14_bxv1r"]
[ext_resource type="AudioStream" uid="uid://kffjcdwavdni" path="res://SFX/New/Buttons_Clicks.mp3" id="15_ux20s"]
[ext_resource type="AudioStream" uid="uid://cm5jcqpgvsjcl" path="res://SFX/mouse/button over.mp3" id="16_ke15f"]
[ext_resource type="AudioStream" uid="uid://djqdcm641i0ny" path="res://Music/MainMenuMusic.mp3" id="17_riqfo"]

[sub_resource type="LabelSettings" id="LabelSettings_8rfh8"]
font = ExtResource("4_7v4os")
font_size = 88

[sub_resource type="LabelSettings" id="LabelSettings_oayd6"]
font = ExtResource("4_7v4os")
font_size = 30

[node name="MainMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_2x1g0")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_riqfo")

[node name="ButtonsBackground" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 690.0
offset_top = 305.0
offset_right = -690.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 6
localize_numeral_system = false
texture = ExtResource("3_yxkem")
expand_mode = 1

[node name="Label" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_top = 1.0
offset_right = -0.0959473
offset_bottom = 431.0
grow_horizontal = 2
text = "Bonkhead"
label_settings = SubResource("LabelSettings_8rfh8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.611
anchor_right = 0.5
anchor_bottom = 0.611
offset_left = -123.0
offset_top = -196.88
offset_right = 127.0
offset_bottom = 179.12
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 35
alignment = 1

[node name="ResumeButton" type="TextureButton" parent="ButtonsContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("5_pjscj")
texture_pressed = ExtResource("6_m7n2d")
texture_hover = ExtResource("7_65hh5")
stretch_mode = 0

[node name="Label" type="Label" parent="ButtonsContainer/ResumeButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -11.5
offset_right = 32.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "RESUME"
label_settings = SubResource("LabelSettings_oayd6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewGameButton" type="TextureButton" parent="ButtonsContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("5_pjscj")
texture_pressed = ExtResource("6_m7n2d")
texture_hover = ExtResource("7_65hh5")
stretch_mode = 0

[node name="Label" type="Label" parent="ButtonsContainer/NewGameButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -11.5
offset_right = 32.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "NEW GAME"
label_settings = SubResource("LabelSettings_oayd6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionButton" type="TextureButton" parent="ButtonsContainer"]
texture_filter = 1
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("5_pjscj")
texture_pressed = ExtResource("6_m7n2d")
texture_hover = ExtResource("7_65hh5")
stretch_mode = 0

[node name="Label" type="Label" parent="ButtonsContainer/OptionButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -11.5
offset_right = 32.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "OPTIONS"
label_settings = SubResource("LabelSettings_oayd6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsButton" type="TextureButton" parent="ButtonsContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("5_pjscj")
texture_pressed = ExtResource("6_m7n2d")
texture_hover = ExtResource("7_65hh5")
stretch_mode = 0

[node name="Label" type="Label" parent="ButtonsContainer/CreditsButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -11.5
offset_right = 32.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "CREDITS"
label_settings = SubResource("LabelSettings_oayd6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="TextureButton" parent="."]
anchors_preset = -1
anchor_left = 0.929
anchor_top = 0.046
anchor_right = 0.973
anchor_bottom = 0.124
offset_left = 0.579956
offset_top = 0.319996
offset_right = -0.540039
offset_bottom = 0.0799866
texture_normal = ExtResource("8_6byu3")
texture_pressed = ExtResource("9_leunp")
texture_hover = ExtResource("10_h1v62")
stretch_mode = 0

[node name="Label" type="Label" parent="ExitButton"]
layout_mode = 0
offset_right = 91.0
offset_bottom = 84.0
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 50
text = "X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OthersMenu" type="CanvasLayer" parent="."]
process_mode = 3
visible = false

[node name="Options" type="VBoxContainer" parent="OthersMenu"]
visible = false
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -656.0
offset_top = 70.0
offset_right = 656.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="OthersMenu/Options"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 50
text = "
Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="OthersMenu/Options"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 50
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="OthersMenu/Options"]
layout_mode = 2

[node name="Label2" type="Label" parent="OthersMenu/Options/HBoxContainer"]
layout_mode = 2
text = "                                     "

[node name="Volumen" type="VBoxContainer" parent="OthersMenu/Options/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
alignment = 1

[node name="General" type="HBoxContainer" parent="OthersMenu/Options/HBoxContainer/Volumen"]
layout_mode = 2
alignment = 1

[node name="MasterSlider" type="HSlider" parent="OthersMenu/Options/HBoxContainer/Volumen/General"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_icons/grabber = ExtResource("11_5hdia")
theme_override_icons/grabber_highlight = ExtResource("12_iqn0u")
theme_override_icons/tick = ExtResource("13_3u44c")
step = 2.0
value = 100.0
allow_lesser = true

[node name="Label" type="Label" parent="OthersMenu/Options/HBoxContainer/Volumen/General"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 25
text = "  General"

[node name="Music" type="HBoxContainer" parent="OthersMenu/Options/HBoxContainer/Volumen"]
layout_mode = 2

[node name="MusicSlider" type="HSlider" parent="OthersMenu/Options/HBoxContainer/Volumen/Music"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_icons/grabber = ExtResource("11_5hdia")
theme_override_icons/grabber_highlight = ExtResource("12_iqn0u")
theme_override_icons/tick = ExtResource("13_3u44c")
step = 2.0
value = 100.0
allow_lesser = true

[node name="Label" type="Label" parent="OthersMenu/Options/HBoxContainer/Volumen/Music"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 25
text = "  Music"

[node name="SFX" type="HBoxContainer" parent="OthersMenu/Options/HBoxContainer/Volumen"]
layout_mode = 2

[node name="SFXSlider" type="HSlider" parent="OthersMenu/Options/HBoxContainer/Volumen/SFX"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_icons/grabber = ExtResource("11_5hdia")
theme_override_icons/grabber_highlight = ExtResource("12_iqn0u")
theme_override_icons/tick = ExtResource("13_3u44c")
step = 2.0
value = 100.0
allow_lesser = true

[node name="Label" type="Label" parent="OthersMenu/Options/HBoxContainer/Volumen/SFX"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 25
text = "  SFX"

[node name="FullScreen" type="VBoxContainer" parent="OthersMenu/Options/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="OthersMenu/Options/HBoxContainer/FullScreen"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 25
text = "Graphics
"

[node name="CheckButton" type="CheckButton" parent="OthersMenu/Options/HBoxContainer/FullScreen"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 16
button_pressed = true
text = "Full Screen  "
alignment = 1

[node name="Label" type="Label" parent="OthersMenu/Options/HBoxContainer"]
layout_mode = 2
text = "                                     "

[node name="VBoxContainer" type="VBoxContainer" parent="OthersMenu/Options"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="OthersMenu/Options/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 35
text = "


Control Layout
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoveLeft" type="HBoxContainer" parent="OthersMenu/Options/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="OthersMenu/Options/VBoxContainer/MoveLeft"]
layout_mode = 2

[node name="Label" type="Label" parent="OthersMenu/Options/VBoxContainer/MoveLeft"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 20
text = "Move Left: "

[node name="Label2" type="Label" parent="OthersMenu/Options/VBoxContainer/MoveLeft"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 20
text = "Left Arrow"

[node name="MoveRight" type="HBoxContainer" parent="OthersMenu/Options/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="OthersMenu/Options/VBoxContainer/MoveRight"]
layout_mode = 2

[node name="Label" type="Label" parent="OthersMenu/Options/VBoxContainer/MoveRight"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 20
text = "Move Right: "

[node name="Label2" type="Label" parent="OthersMenu/Options/VBoxContainer/MoveRight"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 20
text = "Right Arrow"

[node name="MoveDown" type="HBoxContainer" parent="OthersMenu/Options/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="OthersMenu/Options/VBoxContainer/MoveDown"]
layout_mode = 2

[node name="Label" type="Label" parent="OthersMenu/Options/VBoxContainer/MoveDown"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 20
text = "Move Down: "

[node name="Label2" type="Label" parent="OthersMenu/Options/VBoxContainer/MoveDown"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 20
text = "Down Arrow"

[node name="Jump" type="HBoxContainer" parent="OthersMenu/Options/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="OthersMenu/Options/VBoxContainer/Jump"]
layout_mode = 2

[node name="Label" type="Label" parent="OthersMenu/Options/VBoxContainer/Jump"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 20
text = "Jump: "

[node name="Label2" type="Label" parent="OthersMenu/Options/VBoxContainer/Jump"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 20
text = "S    "

[node name="Shoot" type="HBoxContainer" parent="OthersMenu/Options/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="OthersMenu/Options/VBoxContainer/Shoot"]
layout_mode = 2

[node name="Label" type="Label" parent="OthersMenu/Options/VBoxContainer/Shoot"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 20
text = "Shoot: "

[node name="Label2" type="Label" parent="OthersMenu/Options/VBoxContainer/Shoot"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 20
text = "A     "

[node name="Dash" type="HBoxContainer" parent="OthersMenu/Options/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="OthersMenu/Options/VBoxContainer/Dash"]
layout_mode = 2

[node name="Label" type="Label" parent="OthersMenu/Options/VBoxContainer/Dash"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 20
text = "Dash: "

[node name="Label2" type="Label" parent="OthersMenu/Options/VBoxContainer/Dash"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 20
text = "Shift"

[node name="Credits" type="VBoxContainer" parent="OthersMenu"]
visible = false
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -656.0
offset_top = 70.0
offset_right = 656.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="OthersMenu/Credits"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 50
text = "
Credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="OthersMenu/Credits"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 25
text = "
                     FICH - UNL
       
                Maximiliano Bianchini  
             Responsible for everything:  

        - Art  
        - Programming  
        - Music  
        - Animation  
        - Design  
        - Testing"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="OthersMenu/Credits"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label2" type="Label" parent="OthersMenu/Credits/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7v4os")
theme_override_font_sizes/font_size = 25
text = "






Developed with Godot Engine

"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="OthersMenu/Credits/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("14_bxv1r")

[node name="Label2" type="Label" parent="OthersMenu/Credits"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_7v4os")
text = "
I hope you enjoy playing it as much as I enjoyed developing it."
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButtonContainer" type="VBoxContainer" parent="OthersMenu"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.611
anchor_right = 0.5
anchor_bottom = 0.611
offset_left = -124.0
offset_top = 198.12
offset_right = 125.0
offset_bottom = 293.12
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 35
alignment = 1

[node name="BackButton" type="TextureButton" parent="OthersMenu/BackButtonContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("5_pjscj")
texture_pressed = ExtResource("6_m7n2d")
texture_hover = ExtResource("7_65hh5")
stretch_mode = 0

[node name="Label" type="Label" parent="OthersMenu/BackButtonContainer/BackButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -11.5
offset_right = 32.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "BACK"
label_settings = SubResource("LabelSettings_oayd6")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_ux20s")
volume_db = -10.0
bus = &"SFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_ke15f")
bus = &"SFX"

[node name="AudioStream_MainMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_riqfo")
volume_db = -5.0
mix_target = 2
bus = &"Music"

[connection signal="pressed" from="ButtonsContainer/ResumeButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="ButtonsContainer/NewGameButton" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="ButtonsContainer/OptionButton" to="." method="_on_options_pressed"]
[connection signal="pressed" from="ButtonsContainer/CreditsButton" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="OthersMenu/BackButtonContainer/BackButton" to="." method="_on_back_pressed"]
